* [Corrected] Massive code cleanup in regards with Java17